<resources>
    <string name="app_name">Vision Artificial</string>
    <string name="Login">Login</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contraseña</string>
    <string name="title_activity_principal_navegacion">PrincipalNavegacion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="analizar">Procesar Foto</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="tab_text_1">ANALIZAR</string>
    <string name="tab_text_2">HOME</string>
    <string name="tab_text_3">BUSQUEDAS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tomar_fotografia">TOMAR FOTOGRAFIA</string>
    <string name="seleccionar_fotografia">SELECCIONAR FOTOGRAFIA</string>
    <string name="detalles">VER IMAGEN</string>
    <string name="image">Image</string>

</resources>
