<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/txtUsername"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:text="@string/Ingresar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="211dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:text="@string/Login"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtUsername"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>