<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalNavegacion">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="36dp"
        android:text="@string/title_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="317dp"
        android:layout_height="267dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tomarFoto"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/btnAnalizarFoto"
        app:layout_constraintStart_toStartOf="@+id/txtResultadoFoto" />

    <Button
        android:id="@+id/btnAnalizarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/analizar"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/txtResultadoFoto" />

    <TextView
        android:id="@+id/txtResultadoFoto"
        android:layout_width="315dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnTomarFoto"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFoto"
        app:layout_constraintStart_toStartOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFoto"
        app:layout_constraintVertical_bias="0.411" />

</android.support.constraint.ConstraintLayout>